O/openshift-nexus3-3B881dujax/openshift-nexus3.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: openshift-nexus3
    chart: openshift-nexus3-0.1.1
    heritage: Helm
    release: release-name
  name: nexus3
spec:
  ports:
    - name: 8081-tcp
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: nexus3
    deploymentconfig: nexus3
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: openshift-nexus3
    chart: openshift-nexus3-0.1.1
    heritage: Helm
    release: release-name
  name: nexus3
spec:
  replicas: 1
  selector:
    app: nexus3
    deploymentconfig: nexus3
  strategy:
    resources: {}
    type: Rolling
  template:
    metadata:
      labels:
        app: nexus3
        deploymentconfig: nexus3
    spec:
      containers:
        - image: sonatype/nexus3
          imagePullPolicy: Always
          livenessProbe:
            exec:
              command:
                - echo
                - ok
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: nexus3
          ports:
            - containerPort: 8081
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8081
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus3-volume-1
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: nexus3-volume-1
          persistentVolumeClaim:
            claimName: nexus3-pv
  test: false
  triggers:
    - type: ConfigChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: openshift-nexus3
    chart: openshift-nexus3-0.1.1
    heritage: Helm
    release: release-name
  name: nexus3
spec:
  port:
    targetPort: 8081-tcp
  to:
    kind: Service
    name: nexus3
    weight: 100
